schemes correctly displayed on mobile

--- a/mobile/ionicapp/src/app/pages/open-scheme/open-scheme.page.scss
+++ b/mobile/ionicapp/src/app/pages/open-scheme/open-scheme.page.scss
@@ -8,8 +8,19 @@
     transform: translateY(-50%);
 }
 
-.rotationContainer {
-    position: relative;
-    background: red;
+.formatContainer {
+    position: absolute;
+    padding-right: 100% * 16 / 9;
+    height: 100vw;
     display: block;
+    transform: translateY(-100%) rotate(90deg);
+    transform-origin: left bottom;
 }
+
+
+/*
+
+
+
+
+*/
